# MCCopilot

./: .gitignore  .xcode.env.local  FLUTTER_SETUP.md  PROJECT_SUMMARY.md  Podfile  QUICKSTART.md  README.md
Flutter/: .metadata  FLUTTER_MODULES.md  README.md  pubspec.yaml
MCCopilot/: AppDelegate.swift  Info.plist  SceneDelegate.swift  ViewController.swift  WasmBridge.swift
MCCopilot.xcodeproj/: project.pbxproj
ReactNative/: .gitignore  index.tsx  metro.config.js  package-lock.json  package.json  rspack.config.mjs  (+1 more)
Rust/: Cargo.toml
Rust/crates/mccopilot/: Cargo.toml  boltffi.toml  build-apple.sh
Rust/crates/mccopilot-dart/: Cargo.toml
Rust/crates/mccopilot-ffi/: Cargo.toml
Rust/crates/mccopilot-ffi/src/: lib.rs
Rust/crates/mccopilot-lib/: Cargo.toml
Rust/crates/mccopilot-lib/src/: crypto.rs  error.rs  lib.rs  plugin.rs  router.rs  utils.rs
Rust/crates/mccopilot-lib/src/crypto/: aes.rs  hash.rs  rsa.rs
Rust/crates/mccopilot-plugin/: Cargo.toml
Rust/crates/mccopilot-plugin/src/: lib.rs
Rust/crates/mccopilot/product/apple/: MccopilotBridge.podspec  Package.swift
Rust/crates/mccopilot/product/apple/.build/: workspace-state.json
Rust/crates/mccopilot/product/apple/.build/index-build/: build.db  plugin-tools.yaml
Rust/crates/mccopilot/product/apple/MccopilotBridge.xcframework/: Info.plist
Rust/crates/mccopilot/product/apple/MccopilotBridge.xcframework/ios-arm64_x86_64-simulator/Headers/: mccopilot.h  module.modulemap
Rust/crates/mccopilot/product/apple/Sources/BoltFFI/: MccopilotBoltFFI.swift
Rust/crates/mccopilot/src/: lib.rs
(+44 files in other folders)
