[workspace]
resolver = "3"
members = [
    "crates/mccopilot-dart",
    "crates/mccopilot-ffi",
    "crates/mccopilot-lib",
    "crates/mccopilot-plugin",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
# 内部 crates
mccopilot-lib = { path = "crates/mccopilot-lib" }

# 通用依赖
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# FFI 相关
boltffi = "0.1"

# 加密依赖
aes = "0.8"
cbc = "0.1"
cipher = { version = "0.4", features = ["block-padding"] }
ctr = "0.9"
rsa = { version = "0.9", features = ["pem"] }
sha2 = "0.10"
rand = "0.8"
base64 = "0.22"
hkdf = "0.12"
pbkdf2 = { version = "0.12", features = ["sha2"] }
hex = "0.4"