[package]
name = "mccopilot-lib"
version.workspace = true
edition.workspace = true

[dependencies]
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true

# 加密依赖
aes.workspace = true
cbc.workspace = true
cipher = { workspace = true, features = ["block-padding"] }
ctr.workspace = true
rsa = { workspace = true, features = ["pem"] }
sha2.workspace = true
rand.workspace = true
base64.workspace = true
hkdf.workspace = true
pbkdf2.workspace = true
hex.workspace = true
argon2.workspace = true
aes-gcm.workspace = true
